--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -1,45 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kalkulator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="header"></div>
-      <div class="body">
-        <div class="baris1">
-          <button type="button" id="c">C</button>
-          <button type="button" id="tombol">/</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>kalkulator - R@hmat</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="calculator">
+    <form action="#" name="from">
+      <div class="result">
+        <input type="text" name="disp" id="disp" />
+      </div>
+      <div class="buttons">
+        <div class="row">
+          <input type="button" value="7" name="v7" onclick="val(v7.value)" />
+          <input type="button" value="8" name="v8" onclick="val(v8.value)" />
+          <input type="button" value="9" name="v9" onclick="val(v9.value)" />
+          <input type="button" value="+" name="add" onclick="val(add.value)" />
         </div>
-        <div class="baris2">
-          <button type="button" id="tombol">7</button>
-          <button type="button" id="tombol">8</button>
-          <button type="button" id="tombol">9</button>
-          <button type="button" id="tombol">x</button>
+        <div class="row">
+          <input type="button" value="4" name="v4" onclick="val(v4.value)" />
+          <input type="button" value="5" name="v5" onclick="val(v5.value)" />
+          <input type="button" value="6" name="v6" onclick="val(v6.value)" />
+          <input type="button" value="-" name="sub" onclick="val(sub.value)" />
         </div>
-        <div class="baris3">
-          <button type="button" id="tombol">4</button>
-          <button type="button" id="tombol">5</button>
-          <button type="button" id="tombol">6</button>
-          <button type="button" id="tombol">-</button>
+        <div class="row">
+          <input type="button" value="1" name="v1" onclick="val(v1.value)" />
+          <input type="button" value="2" name="v2" onclick="val(v2.value)" />
+          <input type="button" value="3" name="v3" onclick="val(v3.value)" />
+          <input type="button" value="*" name="mul" onclick="val(mul.value)" />
         </div>
-        <div class="baris4">
-          <button type="button" id="tombol">1</button>
-          <button type="button" id="tombol">2</button>
-          <button type="button" id="tombol">3</button>
-          <button type="button" id="tombol">+</button>
-        </div>
-        <div class="baris5">
-          <button type="button" id="nol">0</button>
-          <button type="button" id="hasil">=</button>
+        <div class="row">
+          <input type="button" value="0" name="v0" onclick="val(v0.value)" />
+          <input type="button" value="." name="vdot" onclick="val(vdot.value)" />
+          <input type="button" value="/" name="vdiv" onclick="val(vdiv.value)" />
+          <input type="button" title="Tekan atau klik dua kali untuk menghapus" value="=" name="veql"
+            onclick="caculate()" />
         </div>
       </div>
-    </div>
+    </form>
+    <p>develop by R@hmat</p>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <script>
+    alert(`informasi!!!
+untuk hapus tekan "=" dua kali`);
+    const form = document.querySelector('form');
+
+    function val(result) {
+      form.disp.value += result;
+    }
+
+    function caculate() {
+      if (form.disp.value == "") {
+        alert("kamu belum memasukan angka!!!");
+      } else {
+        form.disp.value = eval(form.disp.value);
+      }
+    }
+    const btn = form.veql;
+    btn.addEventListener('dblclick', function () {
+      form.disp.value = "";
+    });
+  </script>
+</body>
+
 </html>
