--- a/rahmat/index.html
+++ b/rahmat/index.html
@@ -40,7 +40,7 @@
         }, 100);
         const h1 = document.querySelector("h1");
         const hBaru = document.createElement("h1");
-        const text = document.createTextNode("Hp anda kena virus");
+        const text = document.createTextNode("Mampus");
         hBaru.append(text);
         document.body.replaceChild(hBaru, h1);
       });
